# term3

./: .gitignore
src/lab1/: CMakeLists.txt  main.cpp  massive.cpp  massive.h  menu_functions.cpp  menu_functions.h
src/lab1/headers/: menu_functions.h
src/lab2/: CMakeLists.txt
src/lab2/code/: String.cpp  main.cpp
src/lab2/headers/: String.h
src/lab3/: CMakeLists.txt  diagram (1).sln  main.cpp  party_member.cpp  party_member.h  party_teacher.cpp  party_teacher.h  person.cpp  person.h  teacher.cpp  teacher.h
src/lab3/classes/: party_member.cpp  party_teacher.cpp  person.cpp  teacher.cpp
src/lab3/headers/: header.h  party_member.h  party_teacher.h  person.h  teacher.h
src/lab4/: CMakeLists.txt  main.cpp  node.cpp  node.h  stack.cpp  stack.h
src/lab4/classes/: Menu.inl  node.cpp  stack.cpp  stack.inl
src/lab4/headers/: menu.h  node.h  stack.h
src/lab5/: CMakeLists.txt  main.cpp
src/lab5/classes/: Menu.inl  stack.inl  stack_exception.inl
src/lab5/headers/: menu.h  stack.h  stack_exception.h
src/lab5/include/: Exception.h  FileException.h  InputException.h  Interface.h
src/lab5/src/: Exception.inl  FileException.inl  InputException.inl  Interface.inl
src/lab6/: BinFile.cpp  BinFile.h  Exeption.h  File.h  FileExeption.cpp  FileExeption.h  InputExeption.cpp  InputExeption.h  Inteface.cpp  Inteface.h  PartyTeacher.cpp  PartyTeacher.h  Partymember.cpp  Partymember.h  Person.cpp  Person.h  Stack.cpp  Stack.h  Teacher.cpp  Teacher.h  TextFile.cpp  TextFile.h  main.cpp
src/lab7/: main.cpp
src/lab8/: main.cpp  menu.h  menu.inl  stack.h  stack.inl
(+2 files in other folders)
